# did-you-know

./: .env  .env.example  .env.test  .gitignore  =10.0.0  =14.0  AGENTS.md  PROJECT.md  README.md  main.py  opencode.json  package-lock.json  package.json  pyproject.toml  requirements.txt  trace.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.opencode/agents/: architect.md  developer.md  qa.md  reviewer.md  techlead.md  writer.md
.opencode/commands/: format.md  lint.md  run.md  test.md
.opencode/skills/: backend-python.md  database-postgres.md  database_models.md  fastapi_rest.md  frontend-react.md  quality-control.md  redis_messaging.md  service_scaffold.md  testing.md  tools.md
.opencode/tools/: README.md  database_tool.py  example_usage.py
app/: __init__.py  main.py  routes.py  scheduler.py
app/templates/: dashboard.html
board/development/: TKT-001_database_schema_and_migration.md  TKT-003_shared_pydantic_models.md
board/done/: TKT-001_database_schema_and_migration.md  TKT-002_shared_config_and_db_pool.md  TKT-003_shared_pydantic_models.md
board/todo/: TKT-002_shared_config_and_db_pool.md  TKT-003_shared_pydantic_models.md  TKT-004_openrouter_client.md  TKT-005_yaml_configuration_files.md  TKT-006_trend_selector.md  TKT-007_theme_associator.md  TKT-008_content_generator.md  (+5 more)
config/: backup_trends.yaml  content_template.yaml  platforms.yaml
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out1/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html
migrations/: 0001_create_trends.sql  0002_create_themes.sql  0003_create_content.sql  0004_create_posts.sql  0005_add_img_title_to_content.sql  0005_create_generation_state.sql  0005_fix_image_paths.sql  0006_create_text_validation_results.sql
modules/: __init__.py  content_generator.py  text_validator.py  theme_associator.py  trend_selector.py  visual_generator.py
pinterest-uploader-extension/: background.js  content.js  dashboard-bridge.js  inject.js  manifest.json  options.html  options.js  popup.html  popup.js
shared/: __init__.py  config_loader.py  db.py  migrate.py  models.py  openrouter_client.py
tests/: test_cli.py  test_config_loader.py  test_content_generator.py  test_db_pool.py  test_generate_api.py  test_hashtag_fix.py  test_migrate.py  test_models.py  test_openrouter_client.py  test_routes.py  test_scheduler.py  test_schema_migrations.py  test_text_validator.py  test_theme_associator.py  test_trend_selector.py  test_trend_selector_integration.py  test_visual_generator.py
(+48 files in other folders)
